--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "classnames": "^2.2.6",
     "firebase": "^8.2.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
